--- a/index.html
+++ b/index.html
@@ -129,18 +129,18 @@ let ball = {
 
 // IMMAGINI MATTONI
 const brickImages = [
-    "images/img1.png.webp",
-    "images/img2.png.webp",
-    "images/img3.png.webp",
-    "images/img4.png.webp",
-    "images/img5.png.webp",
-    "images/img6.png.webp",
-    "images/img7.png.webp",
-    "images/img8.png.webp",
-    "images/img9.png.webp",
-    "images/img10.png.webp",
-    "images/img11.png.webp",
-    "images/img12.png.webp"
+    "img1.png.webp",
+    "img2.png.webp",
+    "img3.png.webp",
+    "img4.png.webp",
+    "img5.png.webp",
+    "img6.png.webp",
+    "img7.png.webp",
+    "img8.png.webp",
+    "img9.png.webp",
+    "img10.png.webp",
+    "img11.png.webp",
+    "img12.png.webp"
 ];
 
 // MATTONI
@@ -393,3 +393,4 @@ levelComplete.addEventListener("click", () => {
 
 </body>
 </html>
+
