--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <canvas id="game" width="360" height="600"></canvas>
 
 <div id="levelComplete">💩</div>
-<div id="loveMessage">TI AMO ❤️</div>
+<div id="loveMessage">I LOVE YOU MUCH ❤️</div>
 
 <script>
 const canvas = document.getElementById("game");
@@ -393,4 +393,5 @@ levelComplete.addEventListener("click", () => {
 
 </body>
 </html>
+
 
