--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cat Brick Breaker ❤️</title>
+<title>Silly Game From your best silly hetero friend ❤️</title>
 <style>
     body {
         margin: 0;
@@ -393,5 +393,6 @@ levelComplete.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
