--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Silly Game From your best silly hetero friend ❤️</title>
+<title>SILLY GAME FOR YOU❤️</title>
 <style>
     body {
         margin: 0;
@@ -85,7 +85,7 @@
 <body>
 
 <div id="startScreen">
-    <h1>Cat Brick Breaker ❤️</h1>
+    <h1>Silly Game from your best hetero pot friend ❤️</h1>
     <p>Click START to play</p>
     <label>
         <input type="checkbox" id="audioToggle" checked>
@@ -393,6 +393,7 @@ levelComplete.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
